// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component Default button component renders correctly 1`] = `
<Memo(Button)>
  <button
    className="btn btn--document"
  >
    Facbook
  </button>
</Memo(Button)>
`;

exports[`Button component Primary button component renders correctly 1`] = `
<Memo(Button)
  variation="primary"
>
  <button
    className="btn btn--primary"
  >
    Facbook
  </button>
</Memo(Button)>
`;

exports[`Button component Primary button component renders correctly 2`] = `
<Memo(Button)
  variation="secondary"
>
  <button
    className="btn btn--secondary"
  >
    Facbook
  </button>
</Memo(Button)>
`;
